# AdventOfCode

./: .gitignore
2023/: .clang-format  meson.build
2023/day1_part1/: cv_parser.c  cv_parser.h  main.c
2023/day1_part2/: cv_parser.c
2023/day2_part1/: cube_game.c  cube_game.h  main.c
2023/day2_part2/: cube_game.c  cube_game.h  main.c
