project('AoC_2023', 'c')

add_project_arguments('--pedantic-errors', language: 'c')
executable('day1p1', sources: ['day1_part1/main.c', 'day1_part1/cv_parser.c'])
executable('day1p2', sources: ['day1_part2/main.c', 'day1_part2/cv_parser.c'])
executable('day2p1', sources: ['day2_part1/main.c', 'day2_part1/cube_game.c'])
executable('day2p2', sources: ['day2_part2/main.c', 'day2_part2/cube_game.c'])
